# Hawamoni

./: .env.example  .eslintrc.json  .gitignore  DEMO_SCRIPT_3MIN.md  FIXES_APPLIED.md  HACKATHON_PROGRESS_REPORT.txt  PRODUCTION_NOTES.md  README.md  SOLANA_PAY_INTEGRATION.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: ci-cd.yml
Hawamoni Docs/: Hawamoni_PRD_NoCode.docx
hawamoni-treasury/: Anchor.toml
hawamoni_treasury/: Anchor.toml
hawamoni_treasury/programs/hawamoni_treasury/: Cargo.toml
hawamoni_treasury/programs/hawamoni_treasury/src/: lib.rs
hawamoni_treasury/tests/: hawamoni_treasury.ts
public/: manifest.json
public/icons/: README.md
solana-program/programs/hawamoni_treasury/: Cargo.toml
solana-program/programs/hawamoni_treasury/src/: lib.rs
src/app/: layout.tsx  page.tsx
src/app/api/auth/login/: route.ts
src/app/api/auth/register/: route.ts
src/app/dashboard/: page.tsx
src/app/debug/: page.tsx
src/app/signin/: page.tsx
src/app/signup/: page.tsx
src/components/: index.ts
src/components/payment/: PaymentRequestCard.tsx
src/components/providers/: WalletProvider.tsx
src/components/solana/: GroupDuesCard.tsx  SolanaPayDashboard.tsx  SplitBillCard.tsx
src/components/wallet/: WalletConnectionButton.tsx
src/hooks/: index.ts  useAuth.ts  useLocalStorage.ts  useSolanaConnection.ts
src/lib/: api.ts  constants.ts  index.ts  mockData.ts
src/services/: solanaPayService.ts
src/styles/: globals.css
src/types/: dashboard.ts  index.ts  solana.ts
src/utils/: index.ts
(+1 files in other folders)
