[package]
name = "hawamoni_treasury"
version = "0.1.0"
description = "Hawamoni Treasury - Multi-signature group treasury management on Solana"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "hawamoni_treasury"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"

[dev-dependencies]
solana-program-test = "~1.17.0"